--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,10 @@
+/* styles.css */
+@import url('https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic&display=swap');
+
+body, td, th, tr, p, a {
+  font-family: 'Lato', sans-serif;
+  font-size: 16px;
+}
+
+/* Other styles */
 
